# bsdiff-inplace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: git-submodule-update.cmake
demo/: hello2.c  run.sh
include/: bsdiff.h  bspatch.h
include/bsdiff/: adapter.h  bsdiff.h  bspatch.h  patch_format.h  types.h
include/bsdiff/adapters/: array_like_adapter.h
include/bsdiff/legacy/: bsdiff.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  bspatch.c
src/lib/: CMakeLists.txt  README.md  bsdiff.c  bsearch.c  bsearch.h  bspatch.c  helper.h  qsufsort.c  qsufsort.h
test/: CMakeLists.txt
